Revise client update message in index.html
Updated the message regarding client updates.

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 
 <body>
     <h1>Welcome to EaglerCraftX</h1>
-    <h1>This link will no longer be updated, get new links here: https://github.com/eaglercraftx1-8/eaglercraftx1-8.github.io/blob/main/README.md#links</h1>
-    <p>These clients might be outdated.</p>
+    <h1>Unforntently some of these clients may be outdated, but we will try to keep them up to date!</h1>
     <h2 class="pick-client">Pick a Client:</h2>
     <p class="version-text">Version 1.8</p>
     <p class="subtitle">1.8 only supports multiplayer</p>
