--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EaglerCraftX</title>
-    <link rel="icon" type="image/x-icon" href="icon.jpeg">
+    <title>Google</title>
+    <link rel="icon" type="image/x-icon" href="logo.jpeg">
     <style>
         body {
             font-family: 'Arial', sans-serif;
