--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <p class="version-text">Version 1.8</p>
     <p class="subtitle">1.8 only supports multiplayer</p>
 
-    <a href="/1.8/EaglercraftX_1.8_u53_Offline_Signed.html"><button>Main 1.8.9 Client</button></a>
+    <a href="/1.8/main.1.8.9/1.8.html"><button>Main 1.8.9 Client</button></a>
     <a href="/1.8/main1.8.9/index.html"><button>Online only 1.8.9 Client</button></a>
     <a href="/1.8/main1.8.8.html"><button>Online only 1.8.8 Client</button></a>
     <a href="/1.8/resent.html"><button>Resent Client</button></a>
