--- a/index.html
+++ b/index.html
@@ -124,9 +124,8 @@
     <h1>Unforntently some of these clients may be outdated, but we will try to keep them up to date!</h1>
     <h2 class="pick-client">Pick a Client:</h2>
     <p class="version-text">Version 1.8</p>
-    <p class="subtitle">1.8 only supports multiplayer</p>
-
-    <a href="/1.8/main.1.8.9/1.8.html"><button>Main 1.8.9 Client</button></a>
+    
+    <a href="/1.8/1.8.html"><button>Main 1.8.9 Client</button></a>
     <a href="/1.8/main1.8.9/index.html"><button>Online only 1.8.9 Client</button></a>
     <a href="/1.8/main1.8.8.html"><button>Online only 1.8.8 Client</button></a>
     <a href="/1.8/resent.html"><button>Resent Client</button></a>
